# RWUSD

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: rwusd-completion-status-2026-07-08.md  rwusd-pdf-gap-audit-2026-07-03.md  server-dry-run-runbook.md  server-simulation-deployment-checklist.md  server-simulation-runbook.md  strategy-capabilities.md
examples/: live_cycle_inputs.smoke.json  server.dryrun.env.example  server.simulation.env.example
ops/server_sim_window/: README.md  project2-sim-runner.service  project2-sim-window.nginx.conf  run_project2_sim_batch.sh  run_project2_sim_forever.sh  server_preflight_checklist.md
scripts/: collect_account_market_snapshot.py  collect_live_runtime_snapshot.py  compare_live_vs_sim.py  run_live_dryrun.ps1  run_live_sim_runtime.ps1  run_live_sim_runtime.py  run_redeem_topup_smoke.py  run_rwusd_long_cycle_demo.py  run_server_sim_batch.py  run_server_sim_daemon.py  run_sim_config_server.py
server_sim_control/: index.html
src/app/: bootstrap.py  live_cycle_inputs.py  live_orchestrator.py  live_runner.py  live_runtime.py  main.py  sim_config_server.py  simulation_snapshot.py
src/backtest/: datasource.py  demo_long_cycle.py  engine.py  fills.py  funding.py
src/config/: loader.py  schema.py
src/domain/: enums.py  events.py  models.py
src/exchange/: binance_account.py  binance_market.py  binance_rest.py  binance_stream.py
src/infra/: alerts.py  live_sim_comparison.py  logging.py  persistence.py  sim_config_store.py  simulation_batch_report.py  simulation_outcome.py  simulation_report.py
src/risk/: rules.py  (+1 more)
(+56 files in other folders)
