[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rwusd-hedge-strategy"
version = "0.2.0"
description = "RWUSD hedge strategy research and continuous dry-run simulator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "websockets>=13,<14",
]
